@@ -1,48 +1,46 @@
 package com.seal.hackathon.service;
 
 import com.seal.hackathon.domain.entity.Criterion;
+import com.seal.hackathon.domain.entity.Round;
 import com.seal.hackathon.dto.criteria.CriterionRequest;
 import com.seal.hackathon.dto.criteria.CriterionResponse;
 import com.seal.hackathon.exception.ApiException;
 import com.seal.hackathon.repository.CriterionRepository;
+import com.seal.hackathon.repository.ScoreRepository;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
-/** Tieu chi cham cua rieng mot vong thi. */
 @Service
 public class RoundCriterionService {
 
     private final CriterionRepository criterionRepository;
+    private final ScoreRepository scoreRepository;
+    private final RoundService roundService;
     private final CriterionWeightPolicy weightPolicy;
-    private final RoundScoreGuard scoreGuard;
 
-    public RoundCriterionService(
-            CriterionRepository criterionRepository,
-            CriterionWeightPolicy weightPolicy,
-            RoundScoreGuard scoreGuard
-    ) {
+    public RoundCriterionService(CriterionRepository criterionRepository, ScoreRepository scoreRepository, RoundService roundService, CriterionWeightPolicy weightPolicy) {
         this.criterionRepository = criterionRepository;
+        this.scoreRepository = scoreRepository;
+        this.roundService = roundService;
         this.weightPolicy = weightPolicy;
-        this.scoreGuard = scoreGuard;
     }
 
     @Transactional(readOnly = true)
     public List<CriterionResponse> list(UUID roundId) {
-        return criterionRepository.findByRoundId(roundId).stream()
-                .map(CriterionResponse::from)
-                .toList();
+        return criterionRepository.findByRoundId(roundId).stream().map(CriterionResponse::from).collect(Collectors.toList());
     }
 
     @Transactional
     public CriterionResponse add(UUID roundId, CriterionRequest request) {
-        assertNotScoredYet(roundId);
+        Round round = roundService.findOrThrow(roundId);
+        assertNoScoresYet(roundId);
         weightPolicy.assertFits(criterionRepository.findByRoundId(roundId), null, request.weight());
-
         Criterion criterion = Criterion.builder()
-                .roundId(roundId)
+                .round(round)
                 .name(request.name())
                 .description(request.description())
                 .weight(request.weight())
@@ -53,10 +51,13 @@ public class RoundCriterionService {
 
     @Transactional
     public CriterionResponse update(UUID roundId, UUID criterionId, CriterionRequest request) {
-        assertNotScoredYet(roundId);
-        Criterion criterion = findInRoundOrThrow(roundId, criterionId);
+        assertNoScoresYet(roundId);
+        Criterion criterion = criterionRepository.findById(criterionId)
+                .orElseThrow(() -> ApiException.notFound("Không tìm thấy tiêu chí"));
+        if (criterion.getRound() == null || !criterion.getRound().getId().equals(roundId)) {
+            throw ApiException.badRequest("Tiêu chí không thuộc vòng thi này");
+        }
         weightPolicy.assertFits(criterionRepository.findByRoundId(roundId), criterionId, request.weight());
-
         criterion.setName(request.name());
         criterion.setDescription(request.description());
         criterion.setWeight(request.weight());
@@ -66,24 +67,15 @@ public class RoundCriterionService {
 
     @Transactional
     public void remove(UUID roundId, UUID criterionId) {
-        assertNotScoredYet(roundId);
-        criterionRepository.delete(findInRoundOrThrow(roundId, criterionId));
-    }
-
-    private Criterion findInRoundOrThrow(UUID roundId, UUID criterionId) {
+        assertNoScoresYet(roundId);
         Criterion criterion = criterionRepository.findById(criterionId)
-                .orElseThrow(() -> ApiException.notFound("Khong tim thay tieu chi"));
-        if (!roundId.equals(criterion.getRoundId())) {
-            throw ApiException.badRequest("Tieu chi nay khong thuoc vong thi da chon");
-        }
-        return criterion;
+                .orElseThrow(() -> ApiException.notFound("Không tìm thấy tiêu chí"));
+        criterionRepository.delete(criterion);
     }
 
-    /** Sua tieu chi sau khi da cham diem se lam sai het diem da ghi, nen chan lai. */
-    private void assertNotScoredYet(UUID roundId) {
-        if (scoreGuard.hasScores(roundId)) {
-            throw ApiException.conflict(
-                    "Khong the thay doi tieu chi sau khi vong thi da co diem duoc ghi nhan");
+    private void assertNoScoresYet(UUID roundId) {
+        if (scoreRepository.existsByCriterion_Round_Id(roundId)) {
+            throw ApiException.conflict("Không thể thay đổi tiêu chí sau khi vòng thi đã có điểm được ghi nhận");
         }
     }
 }
